2003-02-21  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/tkfbox.tcl (file::Create): This procedure was really
	very crufty in how it went about creating the GUI.  It is far
	easier and more robust to use the grid geometry manager than it is
	to tune the results of pack with tweaks to -width.  [Bug #673722]

	* library/comdlg.tcl (FDGetFileTypes): Set an upper limit on how
	long a file type item description string can get due to appending
	of types. [Bug #617392]

	* tests/panedwindow.test (panedwindow-30.1): 
	* generic/tkPanedWindow.c (DisplayPanedWindow, DisplayProxyWindow): 
	Use the window's depth, not the screen's default depth. [Bug #671122]

2003-02-20  Daniel Steffen  <das@users.sourceforge.net>

	* library/console.tcl: (aqua & macintosh) added missing <Cmd-q>
	binding for corresponding Quit menu item shortcut.

	* macosx/README: updated instructions for embedded build, 
	added various improvements by Russell Owen.

	* unix/tcl.m4: update from Tcl.
	* unix/configure: regen.

2003-02-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinScrlbr.c (UpdateScrollbar): use SIF_DISABLENOSCROLL to
	"disable" scrollbar when on Windows when there is nothing to
	scroll.  This is Windows style, and fixes [Bug #624116].

	* tests/panedwindow.test: 
	* generic/tkPanedWindow.c (ValidSashIndex): corrected to note that
	2 panes must exist before any one sash does. [tcllib Bug #689258]

2003-02-20  Peter Spjuth  <peter.spjuth@space.se>

	* tests/panedwindow.test:
	* generic/tkPanedWindow.c: Fixed calculation of the last slave's
	size when increasing the size of the panedwindow. [Bug #689099]

2003-02-20  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkImgGIF.c (GetDataBlock): Removed pointless static
	variable ZeroDataBlock [Bug #664788]

	* unix/tkUnixFont.c (CanUseFallback): Added argument, passed
	through from callers to FindSubFontForChar(), so that pointers
	into the old subfont table to be updated when that table is